Kubernetes/Network_Policies/namespaceSelector/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    environment: dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
